jwt/security.yaml
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "jwt-example"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: "testing@secure.istio.io"
    jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.9/security/tools/jwt/samples/jwks.json"
  #- issuer: "https://dev-jkd6ttlt.us.auth0.com"
  #  jwksUri: "https://dev-jkd6ttlt.us.auth0.com/.well-known/jwks.json"
  #  audiences:
  #  - "http://auth0-test.hung.org.hk/"
#---
#apiVersion: security.istio.io/v1beta1
#kind: AuthorizationPolicy
#metadata:
#  name: nginx
#  namespace: default
#spec:
#  selector: {}
