jwt/nginx.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  #type: LoadBalancer
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
  - name: https
    protocol: TCP
    port: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
    version: "1.19.8"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        version: "1.19.8"
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.8-alpine
        ports:
        - containerPort: 80
        - containerPort: 443        
        volumeMounts:
        - name: content-vol
          mountPath: /usr/share/nginx/html
      volumes:
      - name: content-vol
        configMap:
          name: site-content-configmap
