jwt/nginx-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hung-org-hk-gateway
spec:
  # suppose the selector can reach the ingress-controller in istio-system space
  selector:
    app: "istio-ingressgateway"
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.hung.org.hk"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
  - nginx-test.hung.org.hk
  gateways:
  #- "istio-system/nginx-gateway"
  - hung-org-hk-gateway
  exportTo:
  # virtual service has to export to istio-system namespace in order to forward the request from the ingress-gateway
  - istio-system
  http:
  - route:
    - destination:
        host: nginx
        port:
          number: 80
